[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longmem4langgraph"
version = "0.2.0"
description = "Long-term memory for LangGraph — pluggable backends, AGNO-style history, crash recovery, semantic search"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Filipe Torres de Carvalho", email = "filipetorresdecarvalho@github.com"}
]
keywords = [
    "langgraph", "langchain", "sqlite", "memory", "persistence",
    "checkpoint", "agno", "state-machine", "ai-agents", "weaviate",
    "vector-search", "semantic-search", "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/filipetorresdecarvalho/LongMem4LangGraph"
Source = "https://github.com/filipetorresdecarvalho/LongMem4LangGraph"
Issues = "https://github.com/filipetorresdecarvalho/LongMem4LangGraph/issues"

[tool.setuptools.packages.find]
where = ["src"]
